fix: adjust header positioning for improved visual alignment

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -546,7 +546,7 @@ header {
   }
   40%,
   60% {
-    top: -1vmin;
+    top: -0.5vmin;
   }
 }
 
@@ -559,7 +559,7 @@ header {
   }
   40%,
   60% {
-    top: -2vmin;
+    top: -1vmin;
   }
 }
 
@@ -572,7 +572,7 @@ header {
   }
   40%,
   60% {
-    top: -2.5vmin;
+    top: -1.5vmin;
   }
 }
 
@@ -585,7 +585,7 @@ header {
   }
   40%,
   60% {
-    top: -3.5vmin;
+    top: -2vmin;
   }
 }
 
@@ -598,7 +598,7 @@ header {
   }
   40%,
   60% {
-    top: 1vmin;
+    top: 0.5vmin;
   }
 }
 
@@ -611,7 +611,7 @@ header {
   }
   40%,
   60% {
-    top: 2vmin;
+    top: 1vmin;
   }
 }
 
@@ -624,7 +624,7 @@ header {
   }
   40%,
   60% {
-    top: 2.5vmin;
+    top: 1.5vmin;
   }
 }
 
@@ -637,7 +637,7 @@ header {
   }
   40%,
   60% {
-    top: 3.5vmin;
+    top: 2vmin;
   }
 }
 
